# paperless-smtp

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.example.py  settings.py  smtp.py
src/: main.py  paperless_client.py  pg.py  settings.py  smtp.py
