[tool.poetry]
name = "paperless-smtp"
version = "0.1.0"
description = ""
authors = ["rabbit-aaron <rabbit.aaron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosmtpd = "^1.4.4.post2"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
